--- a/agendamento.html
+++ b/agendamento.html
@@ -28,9 +28,9 @@
             <select id="servico" required>
                 <option value="" disabled selected>Selecione um serviço...</option>
                 <option value="Brow Lamination">Brow Lamination - 1h (R$ 80,00)</option>
-                <option value="Brow Lamination">Design de Sobrancelha com Henna - 40min (R$ 30,00)</option>
-                <option value="Design de Sobrancelha Personalizado">Design de Sobrancelha Personalizado - 40min (R$ 25,00)</option>
-                <option value="Design Simples">Design de Sobrancelha Simples - 30min (R$ 20,00)</option>
+                <option value="Design de Sobrancelhas com Henna">Design de Sobrancelhas com Henna - 40min (R$ 30,00)</option>
+                <option value="Design de Sobrancelhas Personalizado">Design de Sobrancelhas Personalizado - 40min (R$ 25,00)</option>
+                <option value="Design de Sobrancelhas Simples">Design de Sobrancelhas Simples - 30min (R$ 20,00)</option>
                 <option value="Maquiagem Infantil">Maquiagem Infantil - 40min (R$ 40,00)</option>
                 <option value="Maquiagem Social">Maquiagem Social - 1h (R$ 60,00)</option>
                 <option value="Maquiagem Profissional com Cílios">Maquiagem Profissional com Cílios - 1:30h (R$ 75,00)</option>
